fix(ci): repair Java and Web toolchain bootstrap